--- a/service-passenger-user/src/main/resources/application.yml
+++ b/service-passenger-user/src/main/resources/application.yml
@@ -1,33 +1,25 @@
-#服务端口
-server:
-  port: 8012
 
-#应用名称及验证账号
+server:
+  port: 8013
+
+
 spring:
   application:
     name: service-passenger-user
-  datasource: #数据库连接配置
-    #配置当前姚使用的数据源的操作类型
+  datasource:
+
     type: com.alibaba.druid.pool.DruidDataSource
-    #配置MySQL的驱动程序类
+
     driver-class-name: com.mysql.cj.jdbc.Driver
-    #数据库连接地址
+
     url: jdbc:mysql://localhost:3306/online-taxi-three?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-    #数据库连接用户名
     username: root
-    #数据库连接密码
     password: root
-    #进行数据库连接池的配置
     dbcp2:
-      #初始化提供的连接数
       initial-size: 5
-      #数据库连接池的最小维持连接数
       min-idle: 5
-      #最大的连接数
       max-total: 5
-      #等待连接获取的最大超时时间
       max-wait-millis: 200
-      #验证数据库连接的有效性
       validation-query: SELECT 1
       test-while-idle: true
       test-on-borrow: false
@@ -35,8 +27,18 @@ spring:
 
 
 
-#mybatis配置
 mybatis:
   mapper-locations:
     - classpath:mapper/*.xml
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7900/eureka/
+    registry-fetch-interval-seconds: 30
+    enabled: false
+      #,http://localhost:7901/eureka/,http://localhost:7902/eureka/
+  instance:
+    lease-renewal-interval-in-seconds: 30
+
 
